# tensor-dancer

./: .gitignore  LICENSE  README.md  README_cn.md  dancer_core.cpp  dancer_core.h  dancer_lite.h  ggml_dancer.cpp  insight.h  meson.build  pg_ggml.cpp
pgv_extra/: matrix_lite.c  matrix_lite.h  meson.build  mul_mv.c  pgv_extra.c  pgv_extra.h  vector_extra.control
pgv_extra/sql/: vector_extra--0.1.0.sql
scripts/: commons.py  cov.py  cve.py  generate_and_save.py  pca.py  prompt.md  prompt_cn.md  put_to_db.py  rand_matrix.py  sdv.py
src/: dancer.cpp  dancer.h  dancer_core.cpp  dancer_core.h  dancer_lite.cpp  dancer_lite.h  ggml_dancer.cpp  ggml_dancer.h  insight.cpp  insight.h  pg_ggml.h
tensor_dancer/: agent.cpp  agent.h  copilota.cpp  copilota.h  insight.cpp  insight.h  meson.build  tensor_dancer.c  tensor_dancer.control  tensor_dancer.h
tensor_dancer/sql/: tensor_dancer--0.1.0.sql
test/: assert_matrix.cpp  dump_samples.cpp  ggml_mean.cpp  ggml_pca.cpp  load_matrix.cpp  matrix_header.cpp  matrix_magic.cpp  matrix_product.c  ollama_chat.cpp  ollama_models.cpp  tensor_covariance.cpp  tensor_sdvr.cpp  top_key.cpp  top_key_lite.cpp
